support HTTPS; add some APIs of function

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-#配置端口号
+#自定义port (接受http 请求，重定向到https)
+http.port=8081
+
+#配置端口号 (ssl)
 server.port=8001
 
 #配置数据源
@@ -28,4 +31,15 @@ pagehelper.params=count=countSql
 spring.mvc.static-path-pattern=/**
 #配置静态资源存放的路径
 spring.resources.static-locations=classpath:/static/
-        
+
+# enable HTTPS （开启https)
+server.ssl.enabled=true
+server.ssl.protocol=TLS
+server.ssl.key-store=classpath:domain.pfx
+server.ssl.key-store-password=ADUnbrmD
+server.ssl.key-store-type=PKCS12
+
+
+
+
+
